Cloudflare z-index problem fix v2

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ html, * {
     font-weight: 600;
     margin-right: 6.41%;
     margin-left: auto;
+    z-index: 1;
 }
 
 .nav-link {
